# sandprint

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  build.rs  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benches/: ringbuf_consumer.rs
docs/: architecture.md  ebpf-design.md  output-formats.md
examples/: compare-runtimes.sh  profile-curl.sh  profile-nginx.sh
scripts/: build.sh  install-deps.sh
src/: cli.rs  lib.rs  main.rs
src/bpf/: tracer.bpf.c  tracer.h
src/profile/: diff.rs  markdown.rs  merge.rs  mod.rs  oci.rs  seccomp_h.rs  systemd.rs  trace.rs
src/syscalls/: mod.rs  tables.rs
src/tracer/: attach.rs  attach_pid.rs  mod.rs  output.rs  pidtree.rs  ringbuf.rs  run.rs
tests/: integration.rs
tests/fixtures/: syscall_witness.c
