[package]
name = "sandprint"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Max <max@dockyard.navy>"]
description = "Generate seccomp profiles from observed syscalls of a running process via eBPF"
license = "Apache-2.0"
repository = "https://github.com/mtclinton/sandprint"
homepage = "https://github.com/mtclinton/sandprint"
documentation = "https://docs.rs/sandprint"
readme = "README.md"
keywords = ["seccomp", "bpf", "ebpf", "syscall", "sandbox"]
categories = ["command-line-utilities", "development-tools::profiling"]

[lib]
name = "sandprint"
path = "src/lib.rs"

[[bin]]
name = "sandprint"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
ctrlc = { version = "3.4", features = ["termination"] }
# libbpf is built from libbpf-sys's vendored source; libelf and zlib are
# linked dynamically against the system. We deliberately avoid the `static`
# feature because Debian's static libelf.a omits internal helper symbols
# (eu_search_tree_*) and ZSTD bindings, which makes `rustc -lstatic=elf`
# fail at link time.
libbpf-rs = "0.24"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syscalls = { version = "0.6", default-features = false, features = ["std", "x86_64", "aarch64"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

[build-dependencies]
libbpf-cargo = { version = "0.24", features = ["default"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
